// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericRefinementList renders markup with state 1`] = `
<ng-ais-numeric-menu
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericMenu"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-NumericMenu-header ais-hea"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-NumericMenu-body ais-body"
    >
      
          
      <ul
        class="ais-NumericMenu-list"
      >
        
            
        
        <li
          class="ais-NumericMenu-item ais-NumericMenu-item--selected"
        >
          
              
          <label
            class="ais-NumericMenu-label"
          >
            
                
            <input
              class="ais-NumericMenu-radio"
              name="NumericRefinementList"
              type="radio"
            />
            
                10
              
          </label>
          
            
        </li>
        <li
          class="ais-NumericMenu-item"
        >
          
              
          <label
            class="ais-NumericMenu-label"
          >
            
                
            <input
              class="ais-NumericMenu-radio"
              name="NumericRefinementList"
              type="radio"
            />
            
                20
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-NumericMenu-footer ais-foo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-numeric-menu>
`;

exports[`NumericRefinementList renders markup without state 1`] = `
<ng-ais-numeric-menu
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericMenu"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-NumericMenu-header ais-hea"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-NumericMenu-body ais-body"
    >
      
          
      <ul
        class="ais-NumericMenu-list"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-NumericMenu-footer ais-foo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-numeric-menu>
`;
